--- a/app/src/main/res/layout/activity_bid.xml
+++ b/app/src/main/res/layout/activity_bid.xml
@@ -57,7 +57,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvHighestBid"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"/>
         </LinearLayout>
 
     </ScrollView>
