--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="10dp"
+    android:paddingTop="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:clipToPadding="false">
@@ -46,19 +46,26 @@
             android:textSize="14dp"
             android:text="Winner: "
             />
+
         <TextView
+            android:id="@+id/highestBid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/highestBid"
             android:layout_below="@+id/winner"
-            android:lines="1"
-            android:textStyle="bold"
             android:layout_alignLeft="@id/productName"
-            android:paddingVertical="2dp"
             android:elevation="2dp"
-            android:textSize="14dp"
+            android:lines="1"
+            android:paddingVertical="2dp"
             android:text="Highest Bid: "
-            />
+            android:textSize="14dp"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_marginTop="10dp"
+            style="@style/app_line_black"
+            android:layout_width="match_parent"
+            android:layout_height="1dp">
+        </View>
 
     </LinearLayout>
 
